La etiqueta que se me fue

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <a href="index.html"><img src="images/Hgm7.png" alt="logo"></a><
+            <a href="index.html"><img src="images/Hgm7.png" alt="logo"></a>
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
