Avbout Us y colores

--- a/index.html
+++ b/index.html
@@ -133,20 +133,20 @@
             <!--about content-->
             <div id="about-content">
                 <div class="about-header">
-                    About <span class="color">Me</span>
-                    <span class ="header-caption">Get to Know <span class="color"> me.</span></span>
+                    Sobre <span class="color">Mi</span>
+                    <span class ="header-caption"> <span class="color">Conoscámonos</span></span>
                 </div>
                 <div class="about-main">
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    I'm creative 
-                    <span class="color">web developer</span>
-                     based in New York , USA </span>
+                Soy un creativo 
+                    <span class="color">desarrollador de software</span>
+                    con sede en Managua, Nicaragua. </span>
                      <br>
-               <span class="about-second-line"> With 20 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
+               <span class="about-second-line"> Con más de 5 años de experiencia como desarrollador web profesional, he adquirido habilidades y conocimientos necesarios para que tu proyecto sea un éxito y disfrutemos cada paso mientras trabajamos.</span>
                <div class="cv">
-                <a href="#"><button>Download <span class="colors">CV</span></button></a>
+               
             </div>
             </div>
             <!--about picture-->
@@ -190,7 +190,7 @@
                     </div>
             <!--services header-->
                     <div class="services-heading wow">
-                        <span class="color">My</span> Services
+                        <span class="color">Mis</span> Servicios
                     </div>
             <!--services header end-->
             <!--services content-->
@@ -200,8 +200,9 @@
                                <img src="images/coding.png" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <h2>Web Designing</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <h2>Diseño Web</h2>
+                                <p>Encontremos un diseño acorde a tu empresa, puedes tener desde una página web sencilla hasta una tienda en línea (e-Commerce)</p>
+                                 <a href="#" data-text="CONTACT" id="contact-link-services"><span class="color enlaces">Escríbeme y agendemos una reunión.</span></a>
                                </div>
                            </div>
                            <div class="service-two service wow">
@@ -209,7 +210,7 @@
                                <img src="images/instagram.png" alt="service-two">
                                </div>
                                <div class="service-description">
-                                <h2>Social Media</h2>
+                                <h2>Desarrollo de software</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                                </div>
                            </div>
@@ -218,7 +219,7 @@
                                <img src="images/bulb.png" alt="service-three">
                             </div>
                             <div class="service-description">
-                                <h2>Creative Design</h2>
+                                <h2>Posicionamiento web (SEO)</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                             </div>
                         </div>
@@ -238,7 +239,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">95%</div>
+                 <div class="html-progress wow">100%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -296,7 +297,7 @@
     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
              <div class="footer-text">
-                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Heyner Hernández
              </div>
             </div>
     <!--copyright-section-->
@@ -386,7 +387,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Heyner Hernández
                 </div>
                </div>
        <!--copyright-section-->
@@ -508,7 +509,7 @@
                <!--copyright-section You Can Remove After Downloading-->
                <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Heyner Hernández
                 </div>
                </div>
        <!--copyright-section-->
@@ -608,7 +609,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
                     <div class="footer">
                         <div class="footer-text">
-                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Heyner Hernández
                         </div>
                        </div>
                <!--copyright-section-->
