--- a/index.html
+++ b/index.html
@@ -68,30 +68,35 @@
             <div id="particles"></div>
               <!--Social Media Links-->
             <div class="social-media-links">
-               <a href="#"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-                <a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
-                <a href="#"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
-                <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
+               <a href="https://www.instagram.com/heyner717"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
+                <a href="https://www.facebook.com/hernadez.davila.3/"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
+                <a href="https://www.linkedin.com/in/heyner-hernandez-71018"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://twitter.com/heyner717"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
 
             </div>
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Heyner </span>Hernandez</div>
-                <div class="secondline">
-                I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Developer.", " Freelancer." ]'></span>
-            <span class="slash">|</span>
-        </div>
+                    <div class="firstline"><span class="color">Heyner </span>Hernandez</div>
+                    <div class="secondline">
+                        Soy
+                        <span class="txt-rotate color" data-period="1200"data-rotate='[ " Diseñador de Páginas Web.", " Desarrollador de Software." ]'></span>
+                        <span class="slash">|</span>
+                    </div>
+                    <div class="thirdline">
+                        <div class="download-cv text-center">
+                            <div class="button"><a href="#"><button onclick="descargarPDF()"><span class="index"> Descargar CV<i class="gg-arrow-right"></i></span></button></a></div>
+                        </div>
+                    </div>
                     <div class="contact">
-                <a href="Mailto:heyner717@gmail.com"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
-                <a href="Tel:(505) 8208-5724"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+                        <a href="Mailto:heyner717@gmail.com"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
+                        <a href="Tel:(505) 8208-5724"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
                     </div>    
-            </div>
+                </div>
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/heyner.jpg" alt="logo">
+                <img src="images/heyner.jpg" alt="logo">
             </div>
             <!--header image end-->
         </div>
